# value_ptr

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  conanfile.txt
include/value_ptr/: value_ptr.h
src/: CMakeLists.txt
src/value_ptr/: CMakeLists.txt
src/value_ptr/test/: value_ptr.cpp
test/: CMakeLists.txt  deleters.cpp  value_ptr.cpp
test/compile/: CMakeLists.txt  basic.cpp  non_copy.cpp  non_copy_poly.cpp  run.sh
test/unit/: CMakeLists.txt  fixes.cpp  value_ptr.cpp
